--- a/lsson.html
+++ b/lsson.html
@@ -34,7 +34,7 @@
         </div>
         <div class="dropdown-menu">
             <ul>
-                <li><a href="ep.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="#">Lessons/Browser Outputs</a></li>
                 <li><a href="rf.html">Events</a></li>
                 <li><a href="reftion.html">Reflection</a></li>
